@startuml

' ====== CLASSE BASE ======
class Usuario {
  -id: int
  -nome: String
  -cpf: String
  -telefone: String
  -email: String
  -senha: String
  -tipo: String
  -termos: bool
  -token_hash: String
  -criacao_token: DateTime
  -expiracao_token: DateTime

  +login()
  +logout()
  +cadastrar()
  +recuperarSenha()
}

' ====== HERANÇA ======
class Administrador {
  -id: int
  -nome: String
  -cpf: String
  -telefone: String
  -email: String
  -senha: String
  -tipo: String
  -termos: bool
  -token_hash: String
  -criacao_token: DateTime
  -expiracao_token: DateTime

  +consultarAgendamentos()
  +consultarClientes()
  +cancelar()
}

Usuario <|-- Administrador

' ====== DEMAIS CLASSES ======

class Endereco {
  -id: int
  -rua: String
  -numero: String
  -bairro: String
  -cep: String
}

class Veiculo {
  -id: int
  -modelo: String
  -placa: String
  -marca: String

  +cadastrar()
  +remover()
}

class Agendamento {
  -id: int
  -data: Date
  -hora: Time
  -leva_e_traz: bool
  -pagamento_na_hora: bool
  -executado: bool

  +agendar()
  +cancelar()
  +getDetalhes()
}

class StatusAgendamento {
  -id: int
  -status: String
}

' ====== RELACIONAMENTOS ======

Usuario "1" --> "0..*" Endereco : possui
Usuario "1" --> "0..*" Veiculo : possui
Usuario "1" --> "0..*" Agendamento : realiza

Agendamento "1" --> "1" Veiculo : usa
Agendamento "1" --> "1" StatusAgendamento : tem


Administrador --> Usuario : consulta

@enduml